# sentiment_stock2

./: .gitignore  README.md  debug_analysis.py  list_models.py  models.txt  test_gemini.py  test_gemini2.py  test_scraper.py  test_stock.py
.claude/: settings.local.json
.serena/: project.yml
backend/: main.py  pyproject.toml  render.yaml  requirements.txt
backend/app/api/routes/: predict.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/scraper/: reddit_scraper.py  tdnet_scraper.py
backend/app/services/sentiment/: gemini_analyzer.py
backend/app/services/stock/: price_fetcher.py
backend/results/: event_study_7203.T_2026-03-15.md  event_study_NVDA_2026-02-20.md  event_study_TSLA_2026-03-18.md
backend/scripts/: evaluate_edge.py  run_event_study.py  run_live_prediction.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AIAnalysisEngine.tsx  NewsList.tsx  PriceChart.tsx  SentimentGauge.tsx  SentimentReasoning.tsx  StockPriceCard.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
